# leaf

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  Cross.toml  plan_script106.sh  plan_script107.sh  run_all.sh
.github/workflows/: ci.yml  release.yml
leaf/: Cargo.toml  build.rs
leaf-cli/: Cargo.toml
leaf-cli/src/: main.rs
leaf-ffi/: Cargo.toml
leaf-ffi/src/: lib.rs
leaf-uniffi/: Cargo.toml
leaf-uniffi/src/: lib.rs
leaf/src/: lib.rs  sys.rs  util.rs
leaf/src/app/: dispatcher.rs  fake_dns.rs  mod.rs  nat_manager.rs  router.rs  routing_history.rs  stat_manager.rs
leaf/src/app/api/: api_server.rs
leaf/src/app/inbound/: manager.rs
leaf/src/app/outbound/: manager.rs
leaf/src/config/: common.rs  mod.rs
leaf/src/config/conf/: config.rs
leaf/src/config/internal/: config.proto  config.rs
leaf/src/config/json/: config.rs
leaf/src/config/json/tests/: test_config.rs
leaf/src/proxy/: mod.rs
leaf/src/proxy/rog/: datagram.rs  mod.rs  protocol.rs  stream.rs  util.rs
leaf/src/proxy/rog/outbound/: datagram.rs  mod.rs  stream.rs
leaf/src/proxy/rog/proto/: rog.proto
leaf/src/proxy/rog_tcp/: datagram.rs  mod.rs  protocol.rs  stream.rs  util.rs
leaf/src/proxy/rog_tcp/outbound/: datagram.rs  mod.rs  stream.rs
leaf/src/proxy/tun/: inbound.rs
leaf/tests/: common.rs
scripts/: build_android_uniffi.sh  build_apple_xcframework.sh
uniffi-bin/: Cargo.toml
