[package]
name = "leaf-uniffi"
version = "0.1.0"
authors = ["rikaaa0928 <rikaaa0928@gmail.com>"]
edition = "2018"

[lib]
name = "leafuniffi"
path = "src/lib.rs"
crate-type = ["cdylib"]

[features]
default = [
    "default-ring",
    "auto-reload",
    "routing-history",
]

default-aws-lc= [
    "leaf/rog-default-aws-lc",
    "lifecycle-hooks",
]

default-ring = [
    "leaf/rog-default-ring",
    "lifecycle-hooks",
]

default-openssl = [
    "leaf/rog-default-openssl",
    "lifecycle-hooks",
]

outbound-quic = [
    "leaf/outbound-quic",
]

auto-reload = ["leaf/auto-reload"]
lifecycle-hooks = ["leaf/lifecycle-hooks"]
routing-history = ["leaf/routing-history"]

[dependencies]
leaf = { path = "../leaf", default-features = false, optional = true }
uniffi = { version = "0.29.4" }


[target.'cfg(not(target_os = "windows"))'.dependencies]
mimalloc = { version = "0.1", default-features = false }

[build-dependencies]
uniffi = { version = "0.29.4", features = ["build"] }
